# ndrzcc

./: .gitignore  CMakeLists.txt  Makefile  README.md
man/: ndrzcc.1
src/: CMakeLists.txt  ndr.h  ndr.l  ndr.y  ndr_builtin.c  ndr_builtin.h  ndrzcc.c
tests/: CMakeLists.txt  roundtrip.c  roundtrip.idl  sid.c  sid.idl
